fixed_templates/busybox_checkov_fixed_template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  namespace: test-ns
spec:
  containers:
  - name: busybox-container
    image: busybox:1@sha256:5cd228af7cde277502487da780b34ba111b8fcdcf37ca518d68c5ba565002b36
    command:
    - /bin/sh
    args:
    - -c
    - while true; do echo "Hello, World!"; sleep 10; done
    securityContext:
      runAsNonRoot: true
      runAsUser: 25000
      runAsGroup: 25000
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
      allowPrivilegeEscalation: false
    resources:
      requests:
        cpu: 250m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 128Mi
    livenessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
    readinessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
  securityContext:
    runAsNonRoot: true
    runAsUser: 25000
    runAsGroup: 25000
    seccompProfile:
      type: RuntimeDefault
  automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
